# marrow

./: .env.prod.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
api/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  wrangler.toml
api/alembic/: env.py
api/alembic/versions/: 0999ffe7b838_add_organizations_and_rbac.py  2b5326d2d299_add_rls_tenant_isolation.py  35eb203afc65_add_users_table.py  69d839126d73_create_core_schema.py  bd52bac0673f_node_tree_schema_collapse_collections_.py  c333d20a46d9_add_content_format_to_revisions.py  d3981f696939_add_full_text_search.py  fdf65c08ffa8_add_node_fts_triggers_and_gin_index.py
api/freehold/: app.py  auth.py  cli.py  dependencies.py  export.py  models.py  restore.py  schemas.py  search.py  storage.py
api/freehold/routers/: auth.py  collections.py  organizations.py  pages.py  pages_global.py  spaces.py  workspaces.py
api/marrow/: app.py  auth.py  cli.py  db.py  dependencies.py  export.py  models.py  rbac.py  restore.py  schemas.py  search.py  storage.py
api/marrow/routers/: auth.py  collections.py  nodes.py  pages_global.py  workspaces.py
api/tests/: conftest.py  test_auth.py  test_export.py  test_migration_cycle.py  test_models_smoke.py  test_nodes.py  test_rbac.py  test_restore.py  test_round_trip.py  test_search.py  test_storage.py
docs/: .gitignore  astro.config.mjs  design-tokens.md  package-lock.json  package.json
references/: PR-50-instructions.md  design-tokens.md  prd-data-model-v2.md  prd-design-implementation.md  (+3 more)
(+60 files in other folders)
